feat: Implement GitHub PR monitoring with intelligent batch processing
Major Features:
- Add comprehensive GitHub PR monitoring system with filtering
- Implement separate update commands for RSS and GitHub repositories
- Add intelligent batch processing with configurable limits
- Implement pending queue system for PRs without registered channels

GitHub Integration:
- New /update-repo command to force check specific repository
- New /update-all-repos command to check all repositories
- Repository registration with custom IDs for better organization
- Schedule-based monitoring (e.g., 09:00,13:00,18:00)
- 3-day lookback window to prevent processing too many PRs
- Automatic PR filtering based on labels and line changes

Batch Processing Improvements:
- Process maximum 5 PRs per batch to avoid token limits
- One batch per update/schedule trigger (gradual processing)
- 3-day maximum lookback window for new PR detection
- Discord embed size validation (6000 char limit with truncation)
- Pending queue automatically processed when channels registered

Bug Fixes:
- Fix pending PRs being cleared when no channels existed
- Fix /update-repo not processing pending queue when no new PRs
- Fix potential token limit errors from processing too many PRs
- Fix Discord API rejection from oversized embeds (>6000 chars)

Code Structure:
- Refactor AI module into separate RSS and PR summarizers
- Add dedicated GitHub client with PR filtering capabilities
- Implement GitHubRepository storage layer for Redis
- Add comprehensive test coverage for GitHub functionality
- Extract GitHub commands to separate file for better organization

Documentation:
- Update QUICKSTART.md with GitHub monitoring examples
- Add batch processing behavior explanation
- Update CHANGELOG.md with all new features
- Update PROJECT_SUMMARY.md with architecture changes
- Add environment variables for GitHub configuration

Configuration:
- GITHUB_TOKEN: Personal access token for API
- GITHUB_CHECK_INTERVAL_MINUTES: Fall

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # Redis service for bot storage
   redis:
     image: redis:7-alpine
-    container_name: godot-news-redis
+    container_name: guara-redis
     restart: unless-stopped
     ports:
       - "6379:6379"
@@ -18,14 +18,14 @@ services:
       retries: 3
       start_period: 5s
     networks:
-      - godot-bot-network
+      - guara-bot-network
 
-  # Godot News Bot service
+  # Guara Bot service
   bot:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: godot-news-bot
+    container_name: guara-bot
     restart: unless-stopped
     depends_on:
       redis:
@@ -41,11 +41,17 @@ services:
       MAX_CHANNELS_LIMIT: ${MAX_CHANNELS_LIMIT:-5}
       CHECK_INTERVAL_MINUTES: ${CHECK_INTERVAL_MINUTES:-15}
       
+      # GitHub integration (optional)
+      GITHUB_TOKEN: ${GITHUB_TOKEN:-}
+      GITHUB_CHECK_INTERVAL_MINUTES: ${GITHUB_CHECK_INTERVAL_MINUTES:-30}
+      GITHUB_BATCH_THRESHOLD: ${GITHUB_BATCH_THRESHOLD:-5}
+      GITHUB_FILTER_MIN_CHANGES: ${GITHUB_FILTER_MIN_CHANGES:-5}
+      
       # Redis configuration
       REDIS_URL: redis:6379
       REDIS_PASSWORD: ${REDIS_PASSWORD:-}
     networks:
-      - godot-bot-network
+      - guara-bot-network
     logging:
       driver: "json-file"
       options:
@@ -57,5 +63,5 @@ volumes:
     driver: local
 
 networks:
-  godot-bot-network:
+  guara-bot-network:
     driver: bridge
