--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ DISCORD_TOKEN=your_discord_bot_token_here
 # Google Gemini AI Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
 
+# GitHub Integration Configuration (Optional)
+# Leave GITHUB_TOKEN empty to disable GitHub PR monitoring
+GITHUB_TOKEN=your_github_personal_access_token_here
+GITHUB_CHECK_INTERVAL_MINUTES=30         # How often to check for new PRs (default: 30)
+GITHUB_BATCH_THRESHOLD=5                 # Number of PRs to trigger a summary (default: 5)
+GITHUB_FILTER_MIN_CHANGES=5              # Minimum line changes for high-value filter (default: 5)
+
 # Bot Settings
 MAX_CHANNELS_LIMIT=5
 CHECK_INTERVAL_MINUTES=15
