updated docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,24 @@ services:
     container_name: guara-bot
     depends_on:
       - redis
+    environment:
+      - DISCORD_TOKEN=${DISCORD_TOKEN}
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - REDIS_URL=redis:6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
+      - MAX_CHANNELS_LIMIT=${MAX_CHANNELS_LIMIT:-5}
+      - CHECK_INTERVAL_MINUTES=${CHECK_INTERVAL_MINUTES:-15}
+      - GITHUB_TOKEN=${GITHUB_TOKEN:-}
+      - GITHUB_CHECK_INTERVAL_MINUTES=${GITHUB_CHECK_INTERVAL_MINUTES:-30}
+      - GITHUB_BATCH_THRESHOLD=${GITHUB_BATCH_THRESHOLD:-5}
+      - GITHUB_FILTER_MIN_CHANGES=${GITHUB_FILTER_MIN_CHANGES:-5}
+      - GEMINI_MAX_REQUESTS_PER_MINUTE=${GEMINI_MAX_REQUESTS_PER_MINUTE:-10}
+      - GEMINI_MAX_TOKENS_PER_MINUTE=${GEMINI_MAX_TOKENS_PER_MINUTE:-200000}
+      - GEMINI_MAX_TOKENS_PER_REQUEST=${GEMINI_MAX_TOKENS_PER_REQUEST:-4000}
+      - GEMINI_CIRCUIT_BREAKER_THRESHOLD=${GEMINI_CIRCUIT_BREAKER_THRESHOLD:-5}
+      - GEMINI_CIRCUIT_BREAKER_TIMEOUT_MINUTES=${GEMINI_CIRCUIT_BREAKER_TIMEOUT_MINUTES:-5}
+      - GEMINI_RETRY_ATTEMPTS=${GEMINI_RETRY_ATTEMPTS:-3}
+      - GEMINI_RETRY_BACKOFF_SECONDS=${GEMINI_RETRY_BACKOFF_SECONDS:-1}
     env_file:
       - .env
     restart: unless-stopped
